namespace Assets.Scripts
{
    public static class ConstantsAnimator
    {
        public const string AUTO_ATTACK_TRIGGER_PLAY_AUTO_ATTACK = "PlayAutoAttack";
        public const string AUTO_ATTACK_TRIGGER_STOP_ATTEMPTING_AUTO_ATTACK = "StopAttemptingAutoAttack";
        public const string AUTO_ATTACK_BOOL_WEAPON_SHEATHED = "WeaponSheathed";

        public const string PLAYER_CONTROLLER_BOOL_IS_RUNNING = "IsRunning";
        public const string PLAYER_CONTROLLER_BOOL_JUMP_START = "JumpStart";
        public const string PLAYER_CONTROLLER_BOOL_IS_GROUNDED = "IsGrounded";
        public const string PLAYER_CONTROLLER_FLOAT_INPUT_X = "Input_X";
        public const string PLAYER_CONTROLLER_FLOAT_INPUT_Y = "Input_Y";
        public const string PLAYER_CONTROLLER_FLOAT_HOW_LONG_GROUNDED = "HowLongGrounded";
        public const string PLAYER_CONTROLLER_FLOAT_HOW_LONG_NOT_GROUNDED = "HowLongNotGrounded";

        public const string HEALTH_BOOL_DEATH = "Dead";
        public const string DEATH_ANIMATION_NAME = "Death";

        public const string NPC_AI_FLOAT_VELOCITY_Y = "Input_Y";

        public const string ABILITIES_BOOL_CASTING_1_SUCCESS = "Casting_1_Success";
        public const string ABILITIES_TRIGGER_CAST_FINISHED = "CastFinished";
        public const string ABILITIES_BOOL_USING_ABILITY = "UsingAbility";
        public const string ABILITIES_BOOL_TRANSFER_ABILITY_USAGE = "TransferAbilityUsage";
        public const string ABILITIES_TRIGGER_CANCEL_ABILITY_ANIMATION = "CancelAbilityAnimation";
        public const string ABILITIES_BOOL_CAST_FINAL_ANIMATION_PLAYING = "CastFinalAnimationPlaying";
        
        public const string AUTO_ATTACK_RANDOM_INDEX = "AutoAttackRandomIndex";

        public const string PLAYER_CREATURE_INTEGER_CURRENT_JOB = "CurrentJob";


    }
}
